commented code removed